--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,14 +2,18 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 */12 * * *" # Runs every 12 hours
+    - cron: "0 */12 * * *"  # Runs every 12 hours
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@master
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Generate Snake
+        uses: Platane/snk@master
         with:
           github_user_name: Zuhaib-dev
           outputs: dist/github-contribution-grid-snake.svg
