--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,21 +2,19 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 */12 * * *"  # Runs every 12 hours
+    - cron: "0 */12 * * *"  # every 12 hours
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Generate Snake
-        uses: Platane/snk@master
+      - name: Generate GitHub Snake
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: Zuhaib-dev
-          outputs: dist/github-contribution-grid-snake.svg
+          outputs: |
+            dist/github-contribution-grid-snake.svg
 
       - name: Push changes
         uses: EndBug/add-and-commit@v9
